--- a/src/styles/main.module.css
+++ b/src/styles/main.module.css
@@ -52,6 +52,12 @@
   outline-color: var(--md-sys-color-outline);
 }
 
+.surface-container {
+  background-color: var(--md-sys-color-surface-container);
+  color: var(--md-sys-color-on-surface);
+  outline-color: var(--md-sys-color-outline);
+}
+
 .display-large {
   font-family: var(--md-sys-typescale-display-large-font);
   font-weight: var(--md-sys-typescale-display-large-line-weight);
